<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mavros_msgs</name>
  <version>0.24.0</version>
  <description>
    mavros_msgs defines messages for <a href="http://wiki.ros.org/mavros">MAVROS</a>.
  </description>

  <maintainer email="vooon341@gmail.com">Vladimir Ermakov</maintainer>
  <author email="vooon341@gmail.com">Vladimir Ermakov</author>
  <license>GPLv3</license>
  <license>LGPLv3</license>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/mavros_msgs</url>
  <url type="repository">https://github.com/mavlink/mavros.git</url>
  <url type="bugtracker">https://github.com/mavlink/mavros/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>geographic_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <!-- XXX needed for users of mavlink_convert.h
  <build_export_depend>libmavconn</build_export_depend>
  -->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
