[project]
name = "mavros-tools"
version = "0.1.0"
description = "Mavros development tools"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
	"pymavlink",
	"cogapp",
	"attrs",
	"comment-parser",
]

[project.scripts]
mr-cog = "cogapp:main"

[tool.hatch.build.targets.sdist]
include = ["*.py"]

#[tool.hatch.build.targets.wheel]
#packages = ["mavros_cog"]

[tool.hatch.build.targets.wheel.force-include]
"./" = "./"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
